feat : SarchController에서 question, magazine grpcClient 쓰도록 변경